Update quete liste adapter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,8 +38,6 @@
         android:layout_gravity="center_vertical|center_horizontal"
         android:background="@color/colorAccent"
         android:text="@string/menubutton"
-        android:textColor="@android:color/white"
-        app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="center_vertical|center_horizontal" />
+        android:textColor="@android:color/white" />
 
 </android.support.design.widget.CoordinatorLayout>
