--- a/app/src/main/res/layout/activity_search_itinerary.xml
+++ b/app/src/main/res/layout/activity_search_itinerary.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:layout_editor_absoluteX="8dp"
-    tools:layout_editor_absoluteY="8dp">
+    tools:layout_editor_absoluteY="8dp"
+    tools:targetApi="11">
 
     <TextView
         android:id="@+id/departure_text"
@@ -67,10 +68,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:focusable="false"
         android:ems="10"
-        android:inputType="date"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="153dp" />
+        android:inputType="date" />
 
     <Button
         android:id="@+id/search_button"
